--- a/index.html
+++ b/index.html
@@ -4,49 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <title>VUE.JS Learning</title>
   </head>
   <body>
-    <div id="shopping-list">
-      <header>
-        <h1>{{header || 'Welcome'}}</h1>
-        <button v-if="editing" @click="doEdit">Cancel</button>
-        <button v-else @click="doEdit">Add item</button>
-      </header>
-      <div v-if="editing">
-        <input
-          type="text"
-          @keyup.enter="saveItem"
-          v-model="newItem"
-          placeholder="Add an item"
-        />
-
-        <label for=""
-          ><input type="checkbox" v-model="newItemPriority" />Hign
-          Priority</label
-        >
-        <button @click="saveItem" :disabled="newItem.length === 0">
-          Add Item
-        </button>
-        <ul>
-          <li
-            v-for="item in items"
-            @click="togglePurchased(item)"
-            :key="item.id"
-            class="static-class"
-            :class="{
-             strikeout: item.purchased,
-             priority: item.highPriority
-          }"
-          >
-            {{item.title}}
-          </li>
-        </ul>
+    <div id="app">
+      <div class="row row-cols-1 row-cols-md-2 g-4 mt-5 p-3">
+        <github-user-card
+          v-for="user in usernames"
+          :username="user"
+        ></github-user-card>
       </div>
-      <p>Nice job! You`ve bought all your items!</p>
     </div>
 
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://unpkg.com/vue@next"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <script src="./vue.js"></script>
   </body>
 </html>
