--- a/index.html
+++ b/index.html
@@ -4,32 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <title>VUE.JS Learning</title>
+    <link rel="stylesheet" href="./style.css" />
+    <title>VueJS Zero to Mastery</title>
   </head>
   <body>
     <div id="app">
-      <div class="row row-cols-1 row-cols-md-2 g-4 mt-5 p-3">
-        <github-user-card
-          v-for="user in usernames"
-          :username="user"
-        ></github-user-card>
-      </div>
+      <h1>{{fullName()}}</h1>
+      <hr />
+      <p><a :href="url" target="_blank">Google</a></p>
+      <p v-html="raw_url"></p>
+      <p>{{age}}</p>
+      <label for="firstName">First Name</label>
+      <input type="text" id="firstName" v-model="firstName" />
+      <br />
+      <label for="lastName">last Name</label>
+      <input
+        type="text"
+        id="lastName"
+        :value="lastName"
+        @input="updateLastName('Event was triggered', $event)"
+      />
+      <hr />
+      <button @click="increment">Increment</button>
+      <button @click="decrement">Decrement</button>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
     <script src="https://unpkg.com/vue@next"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
-    <script src="./vue.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
