--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{fullName()}}</h1>
+      <h1>{{fullName}}</h1>
       <hr />
       <p><a :href="url" target="_blank">Google</a></p>
       <p v-html="raw_url"></p>
-      <p>{{age}}</p>
+      <p>{{typeof age}}</p>
       <label for="firstName">First Name</label>
-      <input type="text" id="firstName" v-model="firstName" />
+      <input type="text" id="firstName" v-model.lazy.trim="firstName" />
       <br />
-      <label for="middleName"></label>
-      <input type="text" id="middleName" @keyup="updateMiddleName" />
+
       <label for="lastName">last Name</label>
       <input
         type="text"
@@ -26,6 +25,9 @@
         :value="lastName"
         @input.prevent="updateLastName('Event was triggered', $event)"
       />
+      <br />
+      <label for="age">Age</label>
+      <input type="number" v-model.number="age" /> <br />
       <hr />
       <button @click="increment">Increment</button>
       <button @click="decrement">Decrement</button>
