add webpack and configurate it

--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <title>VueJS Zero to Mastery</title>
   </head>
   <body>
-    <div id="app">
-      <div class="container"><hello></hello></div>
-    </div>
-
     <script src="https://unpkg.com/vue@next"></script>
-    <script src="./script.js"></script>
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
